// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styling and specificity Themed on desktop all builds should match 1`] = `
Object {
  "altButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 128, 0)",
    "color" => "rgb(255, 255, 255)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "altContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
    "border" => "1px solid var(--colors-background-color__yoopg21)",
  },
  "inlineThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(255, 165, 0)",
    "color" => "rgb(0, 0, 0)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "inlineThemeContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
    "border" => "1px solid var(--colors-background-color__yoopg21)",
  },
  "nestedRootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "nestedRootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
    "border" => "1px solid var(--colors-background-color__yoopg21)",
  },
  "root": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
  },
  "rootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
    "border-radius" => "9999px",
    "border-top-left-radius" => "9999px",
    "border-top-right-radius" => "9999px",
    "border-bottom-right-radius" => "9999px",
    "border-bottom-left-radius" => "9999px",
  },
  "rootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
    "border" => "1px solid var(--colors-background-color__yoopg21)",
  },
}
`;

exports[`Styling and specificity Themed on mobile all builds should match 1`] = `
Object {
  "altButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 128, 0)",
    "color" => "rgb(255, 255, 255)",
  },
  "altContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
  },
  "inlineThemeButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(255, 165, 0)",
    "color" => "rgb(0, 0, 0)",
  },
  "inlineThemeContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
  },
  "nestedRootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
  },
  "nestedRootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
  },
  "root": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
  },
  "rootButton": Map {
    "box-shadow" => "rgb(255, 0, 0) 0px 0px 5px 0px",
    "background-color" => "rgb(0, 0, 255)",
    "color" => "rgb(255, 255, 255)",
  },
  "rootContainer": Map {
    "display" => "flex",
    "flex-direction" => "column",
    "gap" => "var(--space-2__yoopg24)",
    "padding" => "var(--space-3__yoopg25)",
  },
}
`;
